# spellhaven

./: .gitignore  Cargo.toml  perf.data  perf.data.old  profile.json
assets/: box.vox  house.vox  player.gltf  tree.vox  tree_2.vox  tree_house.vox
assets/shaders/: instancing_terrain.wgsl  terrain_material.wgsl
benches/: benches.rs  my_benchmark.rs
src/: animations.rs  bird_camera.rs  chunk_generation.rs  chunk_loader.rs  country_cache.rs  debug_resource.rs  flat_camera.rs  fractal_open_simplex.rs  generation_options.rs  lib.rs  mesh_generation.rs  player.rs  quad_tree_data.rs  roughness.rs  terrain_material.rs  utils.rs  voxel_generation.rs  voxel_world.rs  wave_function_collapse.rs  white_noise.rs  world_generation.rs
src/debug_tools/: debug_resource.rs  mod.rs
src/ui/: fps_text.rs  fps_ui.rs  main_menu.rs  mod.rs  task_text.rs  ui.rs
src/world_generation/: chunk_generation.rs  chunk_loading.rs  generation_options.rs  voxel_world.rs
src/world_generation/chunk_generation/: mesh_generation.rs  noise.rs  oak_structure_generator.rs  pine_structure_generator.rs  structure_generator.rs  tree_structure_generator.rs  voxel_generation.rs  voxel_types.rs
src/world_generation/chunk_generation/noise/: cellular_noise.rs  fractal_open_simplex.rs  full_cache.rs  gradient_fractal_noise.rs  lod_height_adjuster.rs  roughness.rs  shift_n_scale.rs  smooth_step.rs  steepness.rs
src/world_generation/chunk_loading/: chunk_loader.rs  country_cache.rs  quad_tree_data.rs
src/world_generation/foliage_generation/: mod.rs  oak_l_system.rs  pine_l_system.rs  tree_l_system.rs
