[package]
name = "spellhaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug_tools mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.18.2"
rand = "0.8.5"
futures-lite = "1.13.0"
noise = "0.9"
bevy_atmosphere = "0.9.0"
fastrand = { version = "2.0.1", features = [] }
bevy_rapier3d = { version = "0.26.0", features = [ "simd-stable", "debug-render-3d" ] }
vox-format = "0.1.0"
bevy-inspector-egui = "0.24.0"
bracket-noise = "0.8.7"
num-traits = "0.2.16"
bitflags = "2.5.0"

[dev-dependencies]
brunch = "0.5.0"
